[gd_scene load_steps=8 format=2]

[ext_resource path="res://title_screen/Fonts/Fredoka24.tres" type="DynamicFont" id=1]
[ext_resource path="res://title_screen/Logos/Logo.png" type="Texture" id=2]
[ext_resource path="res://title_screen/Logos/Wizard.png" type="Texture" id=3]
[ext_resource path="res://title_screen/Logos/Final Project Forest.jpg" type="Texture" id=4]
[ext_resource path="res://title_screen/Fonts/Fredoka48.tres" type="DynamicFont" id=5]
[ext_resource path="res://title_screen/Fonts/Fredoka82.tres" type="DynamicFont" id=6]
[ext_resource path="res://title_screen/TitleScreen.gd" type="Script" id=7]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.88776
margin_right = 1.8877
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 60.0
margin_right = 944.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="HBoxContainer" parent="Menu"]
margin_right = 909.0
margin_bottom = 124.0
custom_constants/separation = 40

[node name="Logo" type="TextureRect" parent="Menu/Title"]
margin_right = 124.0
margin_bottom = 124.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Menu/Title"]
margin_left = 164.0
margin_right = 909.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 6 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Dungeon Defender"

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 128.0
margin_right = 909.0
margin_bottom = 413.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 452.0
margin_bottom = 285.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="NewGame" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 7.0
margin_right = 452.0
margin_bottom = 67.0
rect_min_size = Vector2( 360, 60 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/NewGame"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 77.0
margin_right = 452.0
margin_bottom = 137.0
rect_min_size = Vector2( 360, 60 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Continue"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 147.0
margin_right = 452.0
margin_bottom = 207.0
rect_min_size = Vector2( 360, 60 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Options"]
margin_right = 180.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 217.0
margin_right = 452.0
margin_bottom = 277.0
rect_min_size = Vector2( 360, 60 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Quit"]
margin_right = 103.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 456.0
margin_right = 909.0
margin_bottom = 285.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Character" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 98.0
margin_top = 14.0
margin_right = 354.0
margin_bottom = 270.0
texture = ExtResource( 3 )

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 417.0
margin_right = 909.0
margin_bottom = 480.0
custom_fonts/font = ExtResource( 1 )
text = "Version 1.0
Group 2 Final Project"
[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Quit" to="." method="_on_Quit_pressed"]
